2004-04-04  Todd Berman  <tberman@sevenl.net>

	* Services/ParserService/DefaultParserService.cs: fix nullref

2004-04-04  John Luke  <jluke@cfl.rr.com>

	* Gui/Pads/FileScout.cs: use Gtk.Stock.Open for the icon
	* Gui/Dialogs/SharpDevelopAboutPanels.cs: call Path.GetFullPath
	on assembly location to get rid of '../AddIn/..' stuff
	send the text to the X clipboard also
	* Gui/BrowserDisplayBinding/HtmlViewPane.cs: register the GType
	to fix weirdness

2004-04-04  Todd Berman  <tberman@sevenl.net>

	* Internal/Codons/MenuItems/MenuItemCodon.cs:
	* Internal/Codons/DialogPanelCodon.cs: change label to _label and
	gettext it

2004-04-04  Nick Drochak  <ndrochak@gol.com>

	* Gui/Dialogs/NewProjectDialog.cs: On double click of icon when there
	is an illegal or empty solution name, do not hide dialog.

2004-04-03  Todd Berman  <tberman@sevenl.net>

	* Gui/Workbench/Layous/SdiWorkspaceLayout.cs: set pref height and width
	on the Documents dockitem to -2 to make gdl-dock attempt to give it
	greedy resizing as much as possible.

2004-04-03  Todd Berman  <tberman@sevenl.net>

	* Services/GettextCatalog.cs: moved to .Core.
	* Makefile.am: reflect above change.

2004-04-02  Todd Berman  <tberman@sevenl.net>

	* Services/File/DefaultFileService.cs:
	* Services/ResourceNotFoundException.cs:
	* Services/DisplayBinding/DisplayBindingService.cs:
	* Services/Project/DefaultProjectService.cs:
	* Services/StatusBar/DefaultStatusBarService.cs:
	* Services/MessageService.cs:
	* Services/ParserService/DefaultParserService.cs:
	Finished gettextifyin the base dll.

2004-04-02  Todd Berman  <tberman@sevenl.net>

	* Gui/Pads/ProjectBrowser/BrowserNode/NamedFolderNode.cs:
	* Gui/Pads/ProjectBrowser/NodeBuilder/DefaultDotNetNodeBuilder.cs:
	phantom commit, no one saw this

2004-04-02  Todd Berman  <tberman@sevenl.net>

	* Commands/RunCommands.cs:
	* Commands/FileCommands.cs:
	* Gui/Pads/ProjectBrowser/NodeBuilder/DefaultDotNetNodeBuilder.cs:
	* Internal/ExternalTool/ExternalTool.cs: